Enforces account activity and direction on transactions
Adds validation to ensure only active accounts and accepted
debit/credit directions are allowed for entries, preventing
invalid transactions and improving business rule enforcement.

Updates account DTO and mapping to include activity status.

Improves error feedback and preserves state in redirect URLs
for transaction creation flow.